i have work on showcase

--- a/components/header.html
+++ b/components/header.html
@@ -17,6 +17,6 @@
       <a href="showcase.html" data-page="showcase">Showcase</a>
     </nav>
 
-    <a href="#" class="cta-btn">Join Group</a>
+    <a href="https://chat.whatsapp.com/GXtNVWbiDFi1IkRotX9yOW" class="cta-btn">Join Group</a>
   </div>
 </header>
