i have work on showcase

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,3 +1,4 @@
 <footer>
-  © 2026 Community of Technology & Coding
+  © Live now   
+  If want to contribute visit Github.com/blackprince200
 </footer>
