--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
 
     <div class="brand">
       <div class="logo">
-        <img src="assets/CTC.png" alt="CTC Logo">
+        <img src="assets/icon/CTC.png" alt="CTC Logo">
       </div>
       <div class="tagline">
         COMMUNITY OF<br>TECHNOLOGY & CODING
@@ -12,9 +12,9 @@
 
     <nav class="nav">
       <a href="index.html" data-page="home">About</a>
-      <a href="events.html" data-page="events">Events</a>
       <a href="core_team.html" data-page="team">Core Members</a>
       <a href="showcase.html" data-page="showcase">Showcase</a>
+      <a href="events.html" data-page="events">Events</a>
     </nav>
 
     <a href="https://chat.whatsapp.com/GXtNVWbiDFi1IkRotX9yOW" class="cta-btn">Join Group</a>
