final change it's responsive now

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,3 @@
 <footer>
-  © Live now   
-  If want to contribute visit Github.com/blackprince200
+  © Built with passion & code ⚡ by Akash & Pradeep
 </footer>
