--- a/components/header.html
+++ b/components/header.html
@@ -11,7 +11,7 @@
     </div>
 
     <nav class="nav">
-      <a href="index.html" data-page="home">About</a>
+      <a href="index.html" data-page="home">Home</a>
       <a href="core_team.html" data-page="team">Core Members</a>
       <a href="showcase.html" data-page="showcase">Showcase</a>
       <a href="events.html" data-page="events">Events</a>
