final change it's responsive now

--- a/components/header.html
+++ b/components/header.html
@@ -6,7 +6,7 @@
         <img src="assets/icon/CTC.png" alt="CTC Logo">
       </div>
       <div class="tagline">
-        COMMUNITY OF<br>TECHNOLOGY & CODING
+        COMMUNITY FOR<br>TECHNOLOGY & CODING
       </div>
     </div>
 
